# Findlay_et_al_2025_Nature_Neuroscience

./: README.md  pyproject.toml
notebooks/data_export/: condition_constrasts.ipynb  condition_measures.ipynb  firing_rates.ipynb  multicortical_condition_measures_and_contrasts.ipynb  psds_by_roi.ipynb  ripple_frequency_by_state.ipynb  sgfg_medians.ipynb  sleep_period_fractional_occupancy.ipynb
notebooks/figures/: README.md  condition_constrasts.ipynb  condition_measures.ipynb  fig_1cd.ipynb  fig_2a.ipynb  fig_2b.ipynb  fig_2c.ipynb  fig_3a.ipynb  fig_3b.ipynb  fig_3d.ipynb  fig_5b.ipynb  fig_5cd_e9.ipynb  fig_e1.ipynb  fig_e10.ipynb  fig_e2.ipynb  fig_e3.ipynb  fig_e3abcd.ipynb  fig_e3e.ipynb  fig_e3fg.ipynb  fig_e6.ipynb  fig_e7.ipynb  fig_e7a.ipynb  fig_e7bef.ipynb  fig_e7c.ipynb  fig_e7d.ipynb  fig_e7g.ipynb  fig_s1.ipynb  fig_s2abcdf.ipynb  fig_s4.ipynb  fig_s5.ipynb
notebooks/pipeline/: detect_spindles.ipynb  localize_hippocampal_subregions.ipynb  localize_hippocampus_and_white_matter.ipynb  pipeline.ipynb
r/: README.md
r/analysis/: condition_correlation.yml  condition_correlation_template.Rmd  contrast_correlation.yml  contrast_correlation_template.Rmd  ewk_change.yml  ewk_change_template.Rmd  first_novelty.yml  first_novelty_template.Rmd  homeostasis.yml  homeostasis_template.Rmd  render_condition_correlation.Rmd  render_contrast_correlation.Rmd  render_ewk_change.Rmd  render_first_novelty.Rmd  render_homeostasis.Rmd  ripple_freq.Rmd  seahorse.R  sgfg_by_epoch_type.Rmd  sleep_period_fractional_occupancy.Rmd
r/data/: AeryJones_sgfg_medians_by_epoch_type.pqt  (+3 more)
src/: .gitignore
(+196 files in other folders)
